Fix demo spacing

--- a/src/components/About/Demos/Demo.css
+++ b/src/components/About/Demos/Demo.css
@@ -1,2 +1,8 @@
 @import '../../base.css';
 
+.demo-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  grid-gap: var(--space-3);
+}
